# medical-researcher

./: .gitignore  DEPLOYMENT.md  docker-compose.yaml  render.yaml
backend/: .env.example  Dockerfile  config.py  database.py  exceptions.py  main.py  models.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  schemas.py
backend/api/: chat.py  documents.py  websocket.py
backend/ingest/: docling.py  documents.py
backend/services/: chat_service.py  docling_service.py  document_service.py  embedding_service.py  llm_service.py  vector_service.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatTab.tsx  DocumentDetailModal.tsx  DocumentsTab.tsx  UploadTab.tsx
frontend/lib/: api.ts  types.ts
